Fix overflow styling

--- a/src/res/styles/global.sass
+++ b/src/res/styles/global.sass
@@ -54,7 +54,7 @@ input[type="text"]
 
 pre
   max-width: 100vw
-  overflow: scroll
+  overflow: auto
 
 @media screen and (max-width: 360px)
   .title
